--- a/index.html
+++ b/index.html
@@ -4,10 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <script src="src/js/produtos.js"></script>
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/index.css">
+
     <title>Carrinho de compras</title>
 </head>
 <body>
-    <script src="index.js"></script>
+
+    <button class="btn-modo-dark">Modo Dark</button>
+
+    <header>
+        <h1 class="titulo">Virtual Market</h1>   
+    </header>
+
+<!-- 
+    <main class="products">
+
+        <div class="desc">
+            <span>Item</span>
+            <span>Valor</span>
+        </div>
+        <ul class="list"> -->
+            <!-- <li class="card">
+                <span>Uva</span>
+                <span>R$: 44,99</span>
+            </li>
+            <li class="card">
+                <span>Uva</span>
+                <span>R$ 44,99</span>
+            </li>
+            <li class="card">
+                <span>Uva</span>
+                <span>R$: 44,99</span>
+            </li>
+            <li class="card">
+                <span>Uva</span>
+                <span>R$: 44,99</span>
+            </li>
+            <li class="card">
+                <span>Uva</span>
+                <span>R$: 44,99</span>
+            </li> -->
+        <!-- </ul>
+
+        <section class="resumo">
+            <div class="resumo-total">
+                <span>Total</span>
+                <span>R$ 99,88</span>
+            </div>
+
+            <button class="resumo-btn">Finalizar Compra</button>
+        </section>
+
+    </main> -->
+
+    <script src="src/js/index.js"></script>
 </body>
 </html>
